adding style and added uid for keys

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,21 @@
   integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
   crossorigin="anonymous"
 />
+
+<!-- LandPrides Css -->
+<link type="text/css" rel="stylesheet" href="https://cdn-lp.greatplainsmfg.com/cdn/farfuture/cj5rBmpmS0EiADHRr2Sc8hY62AtDTDxZlXVdPHssnWI/mtime:1604073627/sites/default/files/cdn/css/https/css_zb9YRwymYkouqdHD6LhQ9jYAV25-5cZUmvmGbBWwmcA.css" media="all">
+
+
+<link type="text/css" rel="stylesheet" href="https://cdn-lp.greatplainsmfg.com/cdn/farfuture/tAo4N_Vb4r7IXcS_qvNUNfKnBqVbFA1247J3mh3i9vI/mtime:1604073627/sites/default/files/cdn/css/https/css_zWfPetBrjxwjs6Iur4IGyOU5Li5P2UPXpPjft7fFsiw.css" media="all">
+
+
+<link type="text/css" rel="stylesheet" href="https://cdn-lp.greatplainsmfg.com/cdn/farfuture/xJBRtb-igQt7exxve3CUW-IMGBQmuOH2OboCVpmP5wA/mtime:1604619124/sites/default/files/cdn/css/https/css_nTOq0x14Z2YlzwAfy1pFlFXwJNZ-bKa_Mh2bHE26vqw.css" media="all">
+
+<link type="text/css" rel="stylesheet" href="https://cdn-lp.greatplainsmfg.com/cdn/farfuture/jLgd6h0f4Phu29bcWgnwWSrNVvHN-eJIkeVS_Ba8QYY/mtime:1604619120/sites/default/files/cdn/css/https/css_tL89nPvrSRrXwamdsJVjdW3AxxabNeL4TtkVB0w1_mc.css" media="all">
+
+<link type="text/css" rel="stylesheet" href="https://cdn-lp.greatplainsmfg.com/cdn/farfuture/JEJ7ah0h4lasTCYDUrJI6A_v9lJQfIpZqNuimE5lJnw/mtime:1604073623/sites/default/files/cdn/css/https/css_0_auUlte6XZCnhe8KhtVr1wXlzPa5nivPQfWW4rq_wI.css" media="print">
+
+
     <title>LandPride</title>
   </head>
   <body>
