moved state and api call to App and passing it as props to APicall

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@
 />
 
 <!-- LandPrides Css -->
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,600,700,800" rel="stylesheet">
+
 <link type="text/css" rel="stylesheet" href="https://cdn-lp.greatplainsmfg.com/cdn/farfuture/cj5rBmpmS0EiADHRr2Sc8hY62AtDTDxZlXVdPHssnWI/mtime:1604073627/sites/default/files/cdn/css/https/css_zb9YRwymYkouqdHD6LhQ9jYAV25-5cZUmvmGbBWwmcA.css" media="all">
 
 
@@ -44,7 +46,12 @@
 <link type="text/css" rel="stylesheet" href="https://cdn-lp.greatplainsmfg.com/cdn/farfuture/jLgd6h0f4Phu29bcWgnwWSrNVvHN-eJIkeVS_Ba8QYY/mtime:1604619120/sites/default/files/cdn/css/https/css_tL89nPvrSRrXwamdsJVjdW3AxxabNeL4TtkVB0w1_mc.css" media="all">
 
 <link type="text/css" rel="stylesheet" href="https://cdn-lp.greatplainsmfg.com/cdn/farfuture/JEJ7ah0h4lasTCYDUrJI6A_v9lJQfIpZqNuimE5lJnw/mtime:1604073623/sites/default/files/cdn/css/https/css_0_auUlte6XZCnhe8KhtVr1wXlzPa5nivPQfWW4rq_wI.css" media="print">
+<style type="text/css" media="all">
+<!--/*--><![CDATA[/*><!--*/
+#sliding-popup.sliding-popup-bottom,#sliding-popup.sliding-popup-bottom .eu-cookie-withdraw-banner,.eu-cookie-withdraw-tab{background:#0779bf;}#sliding-popup.sliding-popup-bottom.eu-cookie-withdraw-wrapper{background:transparent}#sliding-popup .popup-content #popup-text h1,#sliding-popup .popup-content #popup-text h2,#sliding-popup .popup-content #popup-text h3,#sliding-popup .popup-content #popup-text p,.eu-cookie-compliance-secondary-button,.eu-cookie-withdraw-tab{color:#fff !important;}.eu-cookie-withdraw-tab{border-color:#fff;}.eu-cookie-compliance-more-button{color:#fff !important;}
 
+/*]]>*/-->
+</style>
 
     <title>LandPride</title>
   </head>
